# everyday-causal-skills

./: .gitignore  CHANGELOG.md  GEMINI.md  LICENSE  README.html  README.md  README.pt-BR.md  bluepeak_wellness.csv  brewbird_did.csv  data.csv  gemini-extension.json  iv_wellness.csv  meridian_wellness.csv  northshelf_did.csv  plugin.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.cursor-plugin/: plugin.json
assets/cover/: index.html  render-gif.mjs
docs/audits/: 2026-04-05-causal-dag-adversarial-audit.md
evals/: runner.py  scorer.py  test_scorer.py
evals/data/: dag_collider.csv  dag_mbias.csv  did_basic_2x2.csv  did_clean.csv  did_nonparallel.csv  did_staggered_covariates.csv  did_staggered_dynamic.csv  did_staggered_notyet.csv  did_staggered_smoke.csv  experiments_noncompliance.csv  experiments_simple.csv  generate_did_staggered_fixtures.py  generate_iv_parity_fixture.py  generate_l2_data.py  generate_matching_l3.py  generate_sc_l3.R  hte_known_heterogeneity.csv  iv_strong.csv  iv_strong_l3.csv  iv_weak.csv  matching_ate_l3.csv  matching_good_overlap.csv  matching_poor_overlap.csv  rdd_bunching.csv  rdd_clean.csv  rdd_sharp_l3.csv  sc_basic_l3.csv  sc_poor_prefit.csv  timeseries_causalarima_l3.csv  timeseries_causalimpact_controls_l3.csv  timeseries_causalimpact_l3.csv  timeseries_clean.csv  timeseries_structural_break.csv
evals/parity/: README.md  audit_workflow.js  baseline.yaml  install-hooks.sh  run_parity.py  test_parity_deps.py  test_run_parity.py
references/: decision-tree.md  dgp-library.md  examples.md  lessons.md  method-registry.md  preflight.md
(+292 files in other folders)
